// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem shims > should include esm shim for node >20.11, if dirname, filename or require are found 1`] = `
"const __dirname = import.meta.dirname; // -- packem CommonJS __dirname shim --
function getDirname() {
  return __dirname;
}

export { getDirname };
"
`;

exports[`packem shims > should include esm shim for node >20.11, if dirname, filename or require are found 2`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function getDirname() {
  return __dirname;
}

exports.getDirname = getDirname;
"
`;

exports[`packem shims > should include esm shim for node >20.11, if dirname, filename or require are found 3`] = `
"const __filename = import.meta.filename; // -- packem CommonJS __filename shim --
function getFilename() {
  return __filename;
}

export { getFilename };
"
`;

exports[`packem shims > should include esm shim for node >20.11, if dirname, filename or require are found 4`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function getFilename() {
  return __filename;
}

exports.getFilename = getFilename;
"
`;

exports[`packem shims > should include esm shim for node >20.11, if dirname, filename or require are found 5`] = `
"import require$$0 from 'node:fs';

function getRequireModule() {
  return require$$0;
}
function esmImport() {
  return import.meta.url;
}

export { esmImport, getRequireModule };
"
`;

exports[`packem shims > should include esm shim for node >20.11, if dirname, filename or require are found 6`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const require$$0 = require('node:fs');

var _documentCurrentScript = typeof document !== 'undefined' ? document.currentScript : null;
const _interopDefaultCompat = e => e && typeof e === 'object' && 'default' in e ? e.default : e;

const require$$0__default = /*#__PURE__*/_interopDefaultCompat(require$$0);

function getRequireModule() {
  return require$$0__default;
}
function esmImport() {
  return (typeof document === 'undefined' ? require('u' + 'rl').pathToFileURL(__filename).href : (_documentCurrentScript && _documentCurrentScript.tagName.toUpperCase() === 'SCRIPT' && _documentCurrentScript.src || new URL('require.cjs', document.baseURI).href));
}

exports.esmImport = esmImport;
exports.getRequireModule = getRequireModule;
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 1`] = `
"import __cjs_url__ from 'node:url'; // -- packem CommonJS __filename shim --
import __cjs_path__ from 'node:path'; // -- packem CommonJS __dirname shim --
const __filename = __cjs_url__.fileURLToPath(import.meta.url);
const __dirname = __cjs_path__.dirname(__filename);
function getDirname() {
  return __dirname;
}

export { getDirname };
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 2`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function getDirname() {
  return __dirname;
}

exports.getDirname = getDirname;
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 3`] = `
"import __cjs_url__ from 'node:url'; // -- packem CommonJS __filename shim --
const __filename = __cjs_url__.fileURLToPath(import.meta.url);
function getFilename() {
  return __filename;
}

export { getFilename };
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 4`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function getFilename() {
  return __filename;
}

exports.getFilename = getFilename;
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 5`] = `
"import require$$0 from 'node:fs';

function getRequireModule() {
  return require$$0;
}
function esmImport() {
  return import.meta.url;
}

export { esmImport, getRequireModule };
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 6`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const require$$0 = require('node:fs');

var _documentCurrentScript = typeof document !== 'undefined' ? document.currentScript : null;
const _interopDefaultCompat = e => e && typeof e === 'object' && 'default' in e ? e.default : e;

const require$$0__default = /*#__PURE__*/_interopDefaultCompat(require$$0);

function getRequireModule() {
  return require$$0__default;
}
function esmImport() {
  return (typeof document === 'undefined' ? require('u' + 'rl').pathToFileURL(__filename).href : (_documentCurrentScript && _documentCurrentScript.tagName.toUpperCase() === 'SCRIPT' && _documentCurrentScript.src || new URL('require.cjs', document.baseURI).href));
}

exports.esmImport = esmImport;
exports.getRequireModule = getRequireModule;
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 7`] = `
"const a = 1;

export { a };
"
`;

exports[`packem shims > should include esm shim, if dirname, filename or require are found 8`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const a = 1;

exports.a = a;
"
`;

exports[`packem shims > should not include esm shim, if dirname, filename or require are not found 1`] = `
"const test = "this should be in final bundle";

export { test as default };
"
`;
